[gd_scene load_steps=4 format=3 uid="uid://dfdk211hkwyvt"]

[ext_resource type="Theme" uid="uid://dsjyqvry1y226" path="res://ThemeEditor/menus_theme.tres" id="1_76y8f"]
[ext_resource type="Script" path="res://Menus/minigames_menu.gd" id="2_kb444"]
[ext_resource type="Texture2D" uid="uid://c3jilcdrom06" path="res://Assets/Background_Menus2.png" id="3_arx0m"]

[node name="minigames_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_76y8f")
script = ExtResource("2_kb444")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -486.0
offset_bottom = -176.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.72948, 1.3717)
texture = ExtResource("3_arx0m")
expand_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06
anchor_top = 0.164
anchor_right = 0.926
anchor_bottom = 0.884
offset_left = -0.120003
offset_top = -0.272003
offset_right = 0.247925
offset_bottom = 0.167969
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="TdMButton" type="Button" parent="VBoxContainer3/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_right = NodePath("../../VBoxContainer2/CTButton")
focus_neighbor_bottom = NodePath("../PPButton")
theme_override_font_sizes/font_size = 60
text = "Tornado da
Mem√≥ria"

[node name="PPButton" type="Button" parent="VBoxContainer3/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../TdMButton")
focus_neighbor_right = NodePath("../../VBoxContainer2/TPButton")
focus_neighbor_bottom = NodePath("../../../BackButton")
theme_override_font_sizes/font_size = 60
text = "Par
Perfeito"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 1

[node name="CTButton" type="Button" parent="VBoxContainer3/HBoxContainer/VBoxContainer2"]
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer/TdMButton")
focus_neighbor_bottom = NodePath("../TPButton")
theme_override_font_sizes/font_size = 60
text = "Contando
Trocos"

[node name="TPButton" type="Button" parent="VBoxContainer3/HBoxContainer/VBoxContainer2"]
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer/PPButton")
focus_neighbor_top = NodePath("../CTButton")
focus_neighbor_bottom = NodePath("../../../BackButton")
theme_override_font_sizes/font_size = 60
text = "Tudo
Pronto?"

[node name="BackButton" type="Button" parent="VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_neighbor_left = NodePath("../HBoxContainer/VBoxContainer/PPButton")
focus_neighbor_top = NodePath("../HBoxContainer/VBoxContainer2/TPButton")
focus_neighbor_right = NodePath("../HBoxContainer/VBoxContainer2/TPButton")
theme = ExtResource("1_76y8f")
theme_type_variation = &"FlatButton"
text = "Voltar"

[connection signal="pressed" from="VBoxContainer3/HBoxContainer/VBoxContainer/TdMButton" to="." method="_on_tdm_button_pressed"]
[connection signal="pressed" from="VBoxContainer3/HBoxContainer/VBoxContainer/PPButton" to="." method="_on_pp_button_pressed"]
[connection signal="pressed" from="VBoxContainer3/HBoxContainer/VBoxContainer2/CTButton" to="." method="_on_ct_button_pressed"]
[connection signal="pressed" from="VBoxContainer3/HBoxContainer/VBoxContainer2/TPButton" to="." method="_on_tp_button_pressed"]
[connection signal="pressed" from="VBoxContainer3/BackButton" to="." method="_on_back_button_pressed"]
